# coursework_8_Docker

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  flace8.cfg  habits_data.json  pyproject.toml  users_data.json
config/: settings.py  urls.py
habits/: admin.py  models.py  serializers.py  tests.py  urls.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: tests.py  urls.py
users/migrations/: 0001_initial.py  0002_user_is_subscribe.py
