[tool.poetry]
name = "coursework-7-drf"
version = "0.1.0"
description = ""
authors = ["Hilshat76"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
psycopg2-binary = "^2.9.10"
pillow = "^11.0.0"
python-dotenv = "^1.0.1"
black = "^24.10.0"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
coverage = "^7.6.8"
drf-yasg = "^1.21.8"
drf-spectacular = "^0.27.2"
stripe = "^11.3.0"
django-cors-headers = "^4.6.0"
celery = "^5.4.0"
eventlet = "^0.38.0"
redis = "^5.2.0"
django-celery-beat = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
